<resources>
    <string name="app_name">SabjiWala</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="shops">Shops</string>
    <string name="log_out">Log out</string>

    <string name="addresses">Address</string>

    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string-array name="quantity_dd">
        <item>01</item>
        <item>02</item>
        <item>03</item>
    </string-array>
    <string name="shop_name"><u><b>Shop Name:</b></u></string>
    <string name="owner_name"><u><b>Owner Name:</b></u></string>
    <string name="address"><u><b>Address:</b></u></string>
    <string name="title_activity_maps">Map</string>
    <string name="rupee_symbol">₹</string>
    <string name="title_activity_choose_sabji_wala">Map</string>
    <string name="change_address_underline"><u><b>Change</b></u></string>
    <string name="update">Update</string>
    <string name="shop_names">Shop name: </string>
    <string name="your_app_version_has_expired_please_update_it">Your app version has expired please update it!</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="total_amount">Total amount :</string>
    <string name="change">Change</string>
    <string name="place_order">Place Order</string>
    <string name="authenticate_your_phone_number">Authenticate your phone number</string>
    <string name="to_continue_at_my_sabji_wala">to continue at My Sabji Wala</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="verify_phone_number">VERIFY PHONE NUMBER</string>
    <string name="by_tapping_verify_phone_number_an_sms_will_be_sent_for_verification">By tapping \'VERIFY PHONE NUMBER\', an SMS will be sent for verification.</string>
    <string name="bill">Bill</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="_0_0">₹0.0</string>
    <string name="call_sabji_wala">Call Sabji Wala</string>
    <string name="owner_names">Owner Name:</string>
    <string name="shop_addresses">Shop Address:</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="order_status">Order Status:</string>
    <string name="vegetables">Vegetables</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="one_time_password">ONE TIME PASSWORD</string>
    <string name="please_enter_6_digit_verfication_code_sent_by_sms_on_your_mobile_phone">Please enter 6-digit verfication code sent by SMS on your mobile phone</string>
    <string name="_0_00">0:00</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_1">1</string>
    <string name="sabji_wala_address">Sabji Wala address :</string>
    <string name="status">Status:</string>
    <string name="order_placed_on">Order placed on</string>
    <string name="for_amount">for Amount</string>
    <string name="reorder">Reorder</string>
    <string name="weight">Quantity:</string>
    <string name="shop_is_not_available">Shop is not available</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="explore_menu">Explore menu</string>
    <string name="version">Version</string>
    <string name="order_history">Order History</string>
    <string name="button_to_add_shops_to_your_list">button to add shops to your list</string>
    <string name="you_don_t_have_any_shops_marked_as_favourite_please_click_on_the">You dont have any shops marked as favourite please click on the</string>
</resources>