<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabji_wala_address"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/sabji_wala_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/no_of_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sabji_wala_address"
            android:layout_marginTop="12dp"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/names_of_vegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_of_items"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_below="@id/names_of_vegetables"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/names_of_vegetables"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_toEndOf="@id/text4"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/text4"
            android:background="#000000" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed_on"
            android:layout_below="@id/view"
            android:layout_marginTop="12dp"
            style="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/text2" />

        <TextView
            android:id="@id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/for_amount"/>

        <TextView
            android:id="@+id/order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_below="@id/text2"
            android:layout_toEndOf="@id/text3"/>

        <Button
            android:id="@+id/reorder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/view"
            android:text="@string/reorder"
            android:layout_marginTop="14dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>