<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart_activity.CartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_empty_shopping_cart" />

        <TextView
            android:id="@id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:text="You don't have anything in your cart"
            android:textSize="24sp" />

        <Button
            android:id="@+id/explore_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_centerHorizontal="true"
            android:text="@string/explore_menu" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/appbar">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/shop_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_name" />

                <TextView
                    android:id="@+id/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/textView1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_name"
                    android:layout_marginTop="10dp"
                    android:text="@string/owner_name" />

                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_name"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/owner_name"
                    android:layout_marginTop="10dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/owner_name"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/textView3" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/cart_items_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shop_details"
                android:orientation="vertical" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cart_items_linear_layout"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/total_amount"
                        style="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        android:id="@+id/sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@id/text3"
                        style="@style/TextAppearance.AppCompat.Title"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_marginBottom="120dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addresses"
                        android:textSize="24sp" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/change_address_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/change"
                        android:textColor="@color/linkTextColor"
                        android:clickable="true"
                        android:contextClickable="true"/>
                    <TextView
                        android:id="@+id/customer_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/change_address_btn" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/paymentMethodImage"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:src="@drawable/cash_on_delivery" />

        <Button
            android:id="@+id/place_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/button_text_size_header"
            android:text="@string/place_order" />
    </RelativeLayout>
</RelativeLayout>